--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-connect": "^2.2.0",
-    "gulp-sass": "^2.0.4"
+    "gulp-jade": "^1.1.0",
+    "gulp-sass": "^2.0.4",
+    "yargs": "^3.23.0"
   }
 }
